--- a/index.html
+++ b/index.html
@@ -48,16 +48,14 @@
                         <h1 class="text-primary mt-2">Aditya Ramchandra Kutre</h1>
                         <div class="mb-4" style="height: 22px;">
                             <h4 class="typed-text-output d-inline-block text-light"></h4>
-                            <div class="typed-text d-none">Python Developer, Dev-Ops Enginner, Application Developer, SAP Commission Consultant</div>
+                            <div class="typed-text d-none">Python Developer, Power BI, Dev-Ops Engineer, Application Developer, SAP Commission Consultant</div>
                         </div>
                         <div class="d-flex justify-content-center mt-auto mb-3">
-                            <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="https://www.linkedin.com/in/aditya-kutre-906a24131" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                         <div class="d-flex align-items-end justify-content-between border-top">
                             <a href="img/Aditya_Ramchandra_Kutre_IIT_Chicago.pdf" download="Aditya_Ramchandra_Kutre_IIT_Chicago.pdf" target="_blank" class="btn w-50 border-end" onclick="return confirmDownload()">Download CV</a>
-                            <a href="akutre@hawk.iit.edu" class="btn w-50 btn-scroll">Contact Me</a>
+                            <a href="mailto:akutre@hawk.iit.edu" class="btn w-50 btn-scroll">Contact Me</a>
                         </div>
                         <script>
                             function confirmDownload() {
@@ -139,7 +137,7 @@
                                         <p class="mb-2">85%</p>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                                 <div class="skill mb-4">
@@ -148,7 +146,7 @@
                                         <p class="mb-2">90%</p>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                                 <div class="skill mb-4">
@@ -162,11 +160,20 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
+                                        <p class="mb-2">R</p>
+                                        <p class="mb-2">60%</p>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
                                         <p class="mb-2">JavaScript</p>
                                         <p class="mb-2">80%</p>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -177,7 +184,7 @@
                                         <p class="mb-2">70%</p>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                                 <div class="skill mb-4">
@@ -186,7 +193,7 @@
                                         <p class="mb-2">80%</p>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                                 <div class="skill mb-4">
@@ -204,7 +211,25 @@
                                         <p class="mb-2">65%</p>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">Microsoft Office Suite</p>
+                                        <p class="mb-2">70%</p>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">Power BI</p>
+                                        <p class="mb-2">70%</p>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -219,20 +244,21 @@
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
                                 <h5 class="mb-1">Software Enginner</h5>
-                                <p class="mb-2">ITC Infotech Ltd<small>2018 - 2019</small></p>
+                                <p class="mb-2">ITC Infotech Ltd <small>2018 - 2019</small></p>
                                 <p>Actively been part of platform support team handling P3 or P4 issues, also successfully resolved a total 200+ tickets/incidents as part of platform maintenance/support. Deployed Windows and AWS Virtual machines, managed database storage, assigned exchange server to clients, performed security checks and server updates, Windows patching, directed network file management as engaged in file management system</p>
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
                                 <h5 class="mb-1">Application Development Analyst</h5>
-                                <p class="mb-2">Accenture Solutions<small>2019 - 2022</small></p>
+                                <p class="mb-2">Accenture Solutions <small>2019 - 2022</small></p>
                                 <p>Involved in Software Application Development, Application Enhancement, Application Maintenance, and support on SAP Callidus Commission Cloud and Informatica PowerCenter as part of integration tool. Provided resolution to critical issues bringing down the commission issue to be reduced 40% and increasing the productivity rate by 15%. Redesigned commission rules improving the payoff efficiency by 20%</p>
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
                                 <h5 class="mb-1">Associate - Projects</h5>
-                                <p class="mb-2">Congnizant Technology Solutions<small>2022 - 2023</small></p>
-                                <p>Worked on report development as part of SAP crystal report designer handling the report designing, user acceptance testing, production deployment and procedure development helping the business to publish the report in more agile and timely manner reducing the payout delay by 45%. Improved the report publication by 25%, boosting the payout accuracy by 40%. Operating business routine updated with most recent data reducing commission data critical issues by 30%</p>
+                                <p class="mb-2">Congnizant Technology Solutions <small>2022 - 2023</small></p>
+                                <p>Developed a predictive model using Python to analyze healthcare claims data further utilized Power BI to create interactive dashboards for summarizing results. Also presented findings to a team, demonstrating effective communication skills.Conducted statistical analysis on clinical data to identify process improvement opportunities. Implemented R for statistical modeling and presented actionable insights to clients. 
+                                    </p>
                             </div>
                         </div>
                     </section>
@@ -274,7 +300,7 @@
                     </section>
                     <!-- Services End -->
 
-                    <!-- Portfolio Start -->
+                    <!-- Portfolio
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">Portfolio</h1>
                         <div class="row">
@@ -333,7 +359,7 @@
                             </div>
                         </div>
                     </section>
-                    <!-- Portfolio End -->
+                 Portfolio End -->
 
                     <!-- Testimonial Start -->
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
@@ -378,7 +404,7 @@
                     </section>
                     <!-- Testimonial End -->
 
-                    <!-- Contact Start -->
+                    <!-- Contact Start 
                     <section class="py-5 wow fadeInUp" data-wow-delay="0.1s" id="contact">
                         <h1 class="title pb-3 mb-5">Contact Me</h1>
 						<p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a></p>
@@ -414,7 +440,7 @@
                             </div>
                         </form>
                     </section>
-                    <!-- Contact End -->
+                    Contact End -->
 
                     <!-- Footer Start -->
                         </div>
