--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="d-flex flex-column h-100 text-center overflow-auto shadow">
                         <img class="w-100 img-fluid mb-4" src="img/profile.jpg" alt="Image">
                         <h1 class="text-primary mt-2">Aditya Ramchandra Kutre</h1>
-                        <div class="mb-4" style="height: 22px;">
+                        <div class="mb-4" style="height: 20px;">
                             <h4 class="typed-text-output d-inline-block text-light"></h4>
                             <div class="typed-text d-none">Python Developer, Power BI, Dev-Ops Engineer, Application Developer, SAP Commission Consultant</div>
                         </div>
@@ -66,8 +66,7 @@
                     <!-- About Start -->
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">About Me</h1>
-                        <p>Software professional with 4 years of IT experience, I specialize in building, automating, optimizing and testing softwares. Currently pursuing a Master's in Computer Science at the Illinois Institute of Technology, I am expected to graduate in September 2025.
-                            My technological skills encompass a range of tools, including SAP Callidus Cloud, Oracle SQL Developer, Informatica, Python, PL/SQL, HTML, CSS, Microsoft Cloud, Service Now, Jira, and WinSCP. I hold certifications as a SAP Certified Application Associate - SAP Commissions, Microsoft Azure AI Fundamentals, Microsoft 365 Fundamentals, Microsoft Security, Compliance and Identity Fundamentals, and Microsoft Azure Fundamentals.</p>
+                        <p>Software professional with 4 years of IT experience, I specialize in building, automating, optimizing and testing softwares. Currently pursuing a Master's in Computer Science at the Illinois Institute of Technology, I am expected to graduate in September 2025.My technological skills encompass a range of tools, including SAP Callidus Cloud, Oracle SQL Developer, Informatica, Python, PL/SQL, HTML, CSS, Microsoft Cloud, Service Now, Jira, and WinSCP. I hold certifications as a SAP Certified Application Associate - SAP Commissions, Microsoft Azure AI Fundamentals, Microsoft 365 Fundamentals, Microsoft Security, Compliance and Identity Fundamentals, and Microsoft Azure Fundamentals.</p>
                         <div class="row mb-4">
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Name:</span> Aditya Ramchandra Kutre
@@ -174,6 +173,15 @@
                                         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">Amazon Web Services</p>
+                                        <p class="mb-2">70%</p>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="skill mb-4">
@@ -187,7 +195,7 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Microsoft Cloud</p>
+                                        <p class="mb-2">Microsoft Azure Cloud</p>
                                         <p class="mb-2">80%</p>
                                     </div>
                                     <div class="progress">
@@ -241,23 +249,44 @@
                         <div class="border-start border-2 border-light pt-2 ps-5">
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Software Enginner</h5>
-                                <p class="mb-2">ITC Infotech Ltd <small>2018 - 2019</small></p>
-                                <p>Actively been part of platform support team handling P3 or P4 issues, also successfully resolved a total 200+ tickets/incidents as part of platform maintenance/support. Deployed Windows and AWS Virtual machines, managed database storage, assigned exchange server to clients, performed security checks and server updates, Windows patching, directed network file management as engaged in file management system</p>
+                                <h5 class="mb-1">Associate - Projects</h5>
+                                <p class="mb-2">Congnizant Technology Solutions <small>2022 - 2023</small></p>
+                                <p>
+                                <ul>
+                                    <li>Worked on report development as part of SAP crystal report designer handling the report designing, user
+                                    acceptance testing, production deployment and procedure development helping the business to publish the
+                                    report in more agile and timely manner reducing the payout delay by 45%</li>
+                                    <li>Led the development of a scalable web application, writing user stories , performing quality assurance
+                                    tasks resulting in a 30% improvement in overall system performance</li>
+                                <li>Collaborated with cross-functional teams to design and implement RESTful APIs for seamless
+                                    integration with external systems</li>
+                                <li>Implemented automated testing procedures, reducing the number of bugs by 25% and improving code quality</li>
+                                </ul></p>
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
                                 <h5 class="mb-1">Application Development Analyst</h5>
                                 <p class="mb-2">Accenture Solutions <small>2019 - 2022</small></p>
-                                <p>Involved in Software Application Development, Application Enhancement, Application Maintenance, and support on SAP Callidus Commission Cloud and Informatica PowerCenter as part of integration tool. Provided resolution to critical issues bringing down the commission issue to be reduced 40% and increasing the productivity rate by 15%. Redesigned commission rules improving the payoff efficiency by 20%</p>
+                                <p><ul>
+                                    <li>Provided resolution to critical issues bringing down the commission issue to be reduced 40% and
+                                    increasing the productivity rate by 15%. Redesigned commission rules improving the payoff efficiency by
+                                    20%</li>
+                                <li>Developed and maintained data processing pipelines using Python, handling large datasets efficiently</li>
+                                <li>Maintaining projects documentation of all the new tasks and repeated being handled</li>
+                                <li>Implemented machine learning models for predictive analysis, contributing to 15% increase in
+                                    customer engagement</li></ul></p>
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Associate - Projects</h5>
-                                <p class="mb-2">Congnizant Technology Solutions <small>2022 - 2023</small></p>
-                                <p>Developed a predictive model using Python to analyze healthcare claims data further utilized Power BI to create interactive dashboards for summarizing results. Also presented findings to a team, demonstrating effective communication skills.Conducted statistical analysis on clinical data to identify process improvement opportunities. Implemented R for statistical modeling and presented actionable insights to clients. 
-                                    </p>
+                                <h5 class="mb-1">Software Enginner</h5>
+                                <p class="mb-2">ITC Infotech Ltd <small>2018 - 2019</small></p>
+                                <p><ul>
+                                    <li>Actively been part of platform support team handling P3 or P4 issues, also successfully resolved a total 200+ tickets/incidents as part of platform maintenance/support</li>
+                                <li>Deployed Windows and AWS Virtual machines, managed database storage, assigned exchange server to clients, performed security checks and server updates, Windows patching, directed network file management as engaged in file management system</li>
+                                </ul></p>
                             </div>
+                            
+                            
                         </div>
                     </section>
                     <!-- Expericence End -->
